--- a/hoothub/pubspec.yaml
+++ b/hoothub/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   timer_count_down: ^2.2.0
   firebase_storage: ^11.7.5
   image_picker: ^1.1.1
+  stop_watch_timer: ^3.1.1
 
 dev_dependencies:
   flutter_test:
